added dbFunction to create new league. view for viewing specific player and editing data. added appropriate routes.

--- a/views/admin/playerADP.ejs
+++ b/views/admin/playerADP.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <% include ../partials/_head %>
-    <title>Admin Login</title>
+    <title>Rank Players</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script type="text/javascript" src="/scripts/admin.js"></script>
