added db functions to remove and update players. renamed updatePlayers to .+rankings. updated views and routes accordingly

--- a/views/admin/playerADP.ejs
+++ b/views/admin/playerADP.ejs
@@ -14,7 +14,7 @@
 
     <div class='container'>
     <!-- When posted, updates player ranks -->
-      <form action="/admin/players" method="post">
+      <form action="/admin/playeradp" method="post">
       <!-- makes tabs for all the positions -->
         <div id="tabs">
           <ul>
