--- a/views/admin/viewPlayer.ejs
+++ b/views/admin/viewPlayer.ejs
@@ -17,7 +17,7 @@
           <div class="panel-title">Edit Player</div>
         </div>
         <div class="panel-heading">
-          <form action='/admin/players/new' method='POST'>
+          <form action='/admin/players/<%= player.id %>' method='POST'>
             <div class='form-group col-xs-12'>
               <label for='username'>Name</label>
               <input type='text' name='name' class='form-control' id='name' value='<%= player.name %>'>
@@ -57,8 +57,10 @@
             <div class='form-group col-xs-12'>
               <button type='submit' class='btn btn-default'>Submit</button>
               <a href="/admin/players" class="btn btn-default" role="button">Cancel</a>
-              <a href="/admin/players" class="btn btn-danger pull-right" role="button">Delete</a>
             </div>
+          </form>
+          <form action="/admin/players/<%= player.id %>/delete" method="post">
+            <button type='submit' class='btn btn-danger pull-right'>Delete</button>
           </form>
         </div>
       </div>
