--- a/views/admin/viewPlayer.ejs
+++ b/views/admin/viewPlayer.ejs
@@ -55,12 +55,12 @@
               </div>
             </div>
             <div class='form-group col-xs-12'>
-              <button type='submit' class='btn btn-default'>Submit</button>
-              <a href="/admin/players" class="btn btn-default" role="button">Cancel</a>
+              <a href="/admin/players" class="btn btn-default pull-right" role="button">Cancel</a>
+              <button type='submit' class='btn btn-default pull-right'>Submit</button>
             </div>
           </form>
           <form action="/admin/players/<%= player.id %>/delete" method="post">
-            <button type='submit' class='btn btn-danger pull-right'>Delete</button>
+            <button type='submit' class='btn btn-danger pull-left'>Delete</button>
           </form>
         </div>
       </div>
