--- a/views/football/draft/view.ejs
+++ b/views/football/draft/view.ejs
@@ -12,6 +12,7 @@
       </div>
       <div class="col-xs-6">
         <button data-toggle="collapse" data-target="#tabs" type="button" class="btn btn-default">Toggle Players</button>
+        <!-- style is used in line so js functionality will work with all tabs. This is the only small one -->
         <div id="tabs" style="max-height:400px;overflow-y:scroll" class="collapse">
           <div>
             <ul>
